--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -6,7 +6,10 @@
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; padding: 24px; }
     h1 { margin: 0 0 12px 0; }
-    .refresh { margin-bottom: 12px; }
+    .toolbar { display: flex; gap: 8px; margin: 8px 0 16px; align-items: center; }
+    .filter { padding: 6px 10px; border: 1px solid #ddd; border-radius: 8px; background:#fff; cursor:pointer; }
+    .filter.active { border-color:#333; font-weight:600; }
+    .refresh { margin-left: auto; }
     table { border-collapse: collapse; width: 100%; }
     th, td { padding: 10px 12px; border-bottom: 1px solid #eee; }
     th { text-align: left; font-size: 14px; color: #555; }
@@ -19,11 +22,20 @@
     .factor-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 8px; margin-top: 8px; }
     .small { color: #666; font-size: 12px; }
     .score { width: 80px; }
+    .muted { color:#777; font-size:12px; }
   </style>
 </head>
 <body>
   <h1>Customer Health</h1>
-  <button id="refresh" class="refresh">Refresh</button>
+
+  <div class="toolbar">
+    <button class="filter active" data-filter="all">All</button>
+    <button class="filter" data-filter="risk">At Risk (&lt;40)</button>
+    <button class="filter" data-filter="watch">Watch (40–79)</button>
+    <button class="filter" data-filter="healthy">Healthy (≥80)</button>
+    <span id="count" class="muted"></span>
+    <button id="refresh" class="refresh">Refresh</button>
+  </div>
 
   <table id="tbl">
     <thead>
@@ -37,6 +49,9 @@
   </table>
 
   <script>
+    let customersCache = [];
+    let currentFilter = 'all';
+
     function badgeClass(score){ return score >= 80 ? 'healthy' : score >= 40 ? 'watch' : 'risk'; }
     function scoreBadge(score) {
       const span = document.createElement('span');
@@ -45,51 +60,66 @@
       return span;
     }
     function labelize(key) { return key.replace(/_/g,' ').replace(/\b\w/g, c => c.toUpperCase()); }
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, ch => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[ch]));
+    function escapeHtml(s){ return String(s).replace(/[&<>"']/g, ch => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[ch])); }
+    function matchesFilter(score) {
+      if (currentFilter === 'all') return true;
+      if (currentFilter === 'risk') return score < 40;
+      if (currentFilter === 'watch') return score >= 40 && score < 80;
+      if (currentFilter === 'healthy') return score >= 80;
+      return true;
+    }
+
+    function render() {
+      const tbody = document.getElementById('tbody');
+      tbody.innerHTML = '';
+
+      // sort ASC by score
+      const data = customersCache.slice().sort((a,b) => (a.health_score ?? 0) - (b.health_score ?? 0));
+
+      // counts for the small legend
+      const counts = { all: data.length, risk:0, watch:0, healthy:0 };
+      data.forEach(c => {
+        const s = Number(c.health_score || 0);
+        if (s < 40) counts.risk++; else if (s < 80) counts.watch++; else counts.healthy++;
+      });
+
+      document.getElementById('count').textContent =
+        `Showing ${currentFilter === 'all' ? counts.all : counts[currentFilter]} of ${counts.all}`;
+
+      for (const c of data) {
+        const score = Number(c.health_score || 0);
+        if (!matchesFilter(score)) continue;
+
+        const tr = document.createElement('tr');
+        tr.dataset.id = c.id;
+
+        const tdScore = document.createElement('td');
+        tdScore.appendChild(scoreBadge(score));
+        tr.appendChild(tdScore);
+
+        const tdName = document.createElement('td');
+        tdName.textContent = c.name;
+        tr.appendChild(tdName);
+
+        const tdSeg = document.createElement('td');
+        tdSeg.textContent = c.segment;
+        tr.appendChild(tdSeg);
+
+        tr.addEventListener('click', () => toggleDetails(tr, c.id, c.name));
+        tbody.appendChild(tr);
+      }
     }
 
     async function load() {
       const btn = document.getElementById('refresh');
       btn.disabled = true; btn.textContent = 'Loading...';
-      const tbody = document.getElementById('tbody');
-      tbody.innerHTML = '';
-
       try {
         const res = await fetch('/api/customers');
-        const customers = await res.json();
-
-        // 1) sort by score ASC (lowest first)
-        customers.sort((a,b) => (a.health_score ?? 0) - (b.health_score ?? 0));
-
-        // 2) render rows
-        for (const c of customers) {
-          const tr = document.createElement('tr');
-          tr.dataset.id = c.id;
-
-          const tdScore = document.createElement('td');
-          tdScore.appendChild(scoreBadge(Number(c.health_score || 0)));
-          tr.appendChild(tdScore);
-
-          const tdName = document.createElement('td');
-          tdName.textContent = c.name;
-          tr.appendChild(tdName);
-
-          const tdSeg = document.createElement('td');
-          tdSeg.textContent = c.segment;
-          tr.appendChild(tdSeg);
-
-          // On click: toggle a details row inserted right after this row
-          tr.addEventListener('click', () => toggleDetails(tr, c.id, c.name));
-          tbody.appendChild(tr);
-        }
+        customersCache = await res.json();
+        render();
       } catch (e) {
-        const tr = document.createElement('tr');
-        const td = document.createElement('td');
-        td.colSpan = 3;
-        td.textContent = 'Failed to load customers.';
-        tr.appendChild(td);
-        tbody.appendChild(tr);
+        const tbody = document.getElementById('tbody');
+        tbody.innerHTML = '<tr><td colspan="3">Failed to load customers.</td></tr>';
       } finally {
         btn.disabled = false; btn.textContent = 'Refresh';
       }
@@ -97,14 +127,8 @@
 
     async function toggleDetails(row, id, name) {
       const next = row.nextElementSibling;
+      if (next && next.classList.contains('details-row')) { next.remove(); return; }
 
-      // If the next row is already this row's details → remove (toggle off)
-      if (next && next.classList.contains('details-row')) {
-        next.remove();
-        return;
-      }
-
-      // Insert a placeholder details row directly below the clicked row
       const detailsTr = document.createElement('tr');
       detailsTr.className = 'details-row';
       const td = document.createElement('td');
@@ -117,7 +141,6 @@
         const res = await fetch(`/api/customers/${id}/health`);
         const breakdown = await res.json();
         const factors = breakdown.factors || {};
-
         td.innerHTML = `
           <div><strong>${escapeHtml(name)}</strong> — Total:
             <span class="badge ${badgeClass(breakdown.total)}">${Number(breakdown.total).toFixed(1)}</span>
@@ -131,10 +154,20 @@
             `).join('')}
           </div>
         `;
-      } catch (e) {
+      } catch {
         td.innerHTML = `<div class="small" style="color:#b3261e">Failed to load breakdown.</div>`;
       }
     }
+
+    // filter buttons
+    document.querySelectorAll('.filter').forEach(btn => {
+      btn.addEventListener('click', () => {
+        document.querySelectorAll('.filter').forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+        currentFilter = btn.dataset.filter;
+        render();
+      });
+    });
 
     document.getElementById('refresh').addEventListener('click', load);
     load();
