--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -6,6 +6,24 @@
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; padding: 24px; }
     h1 { margin: 0 0 12px 0; }
+
+    /* Metrics explainer */
+    .explainer {
+      margin: 6px 0 18px;
+      padding: 12px 14px;
+      background: #f8f9fb;
+      border: 1px solid #e6e8ee;
+      border-radius: 10px;
+    }
+    .explainer h2 {
+      margin: 0 0 8px 0;
+      font-size: 16px;
+      color: #333;
+    }
+    .explainer p { margin: 0 0 10px 0; color: #555; }
+    .explainer ul { margin: 0; padding-left: 18px; color: #444; }
+    .explainer li { margin: 6px 0; }
+
     .toolbar { display: flex; gap: 8px; margin: 8px 0 16px; align-items: center; flex-wrap: wrap; }
     .filter { padding: 6px 10px; border: 1px solid #ddd; border-radius: 8px; background:#fff; cursor:pointer; }
     .filter.active { border-color:#333; font-weight:600; }
@@ -22,12 +40,30 @@
     .factor-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 8px; margin-top: 8px; }
     .small { color: #666; font-size: 12px; }
     .score { width: 80px; }
+    .idcol { width: 70px; color:#666; }
     .muted { color:#777; font-size:12px; }
     @media (max-width: 640px) { .refresh { order: 2; margin-left: 0; } }
   </style>
 </head>
 <body>
   <h1>Customer Health</h1>
+
+  <!-- Metrics explainer -->
+  <div class="explainer">
+    <h2>How the score works</h2>
+    <p>
+      Each customer gets a 0–100 health score, computed as a weighted blend of the factors below.
+      Scores are <em>segment/size-aware</em> where relevant (e.g., normalized by seats).
+      Click any row to view that customer’s factor breakdown directly beneath it.
+    </p>
+    <ul>
+      <li><strong>Login Frequency (30d)</strong> — engagement level. Normalized by seats and segment targets.</li>
+      <li><strong>Feature Adoption (30d)</strong> — breadth of value: distinct core features used.</li>
+      <li><strong>Support Ticket Volume (30d)</strong> — product friction. Penalized per 100 seats (fewer is better).</li>
+      <li><strong>Invoice Timeliness (≈180d)</strong> — commercial risk, using a <em>recency-weighted</em> paid vs late ratio.</li>
+      <li><strong>API Usage Trend (7d vs prev 7d)</strong> — short-term momentum (ratio up/down around neutral).</li>
+    </ul>
+  </div>
 
   <div class="toolbar">
     <button class="filter active" data-filter="all">All</button>
@@ -41,6 +77,7 @@
   <table id="tbl">
     <thead>
       <tr>
+        <th class="idcol">ID</th>
         <th class="score">Score</th>
         <th>Name</th>
         <th>Segment</th>
@@ -53,7 +90,7 @@
     let customersCache = [];
     let currentFilter = 'all';
 
-    // Color badge by absolute quality so users still recognize great/poor scores at a glance.
+    // Absolute coloring so badges remain intuitive at a glance
     function badgeClass(score){ return score >= 80 ? 'healthy' : score >= 40 ? 'watch' : 'risk'; }
     function scoreBadge(score) {
       const span = document.createElement('span');
@@ -66,7 +103,7 @@
       return String(s).replace(/[&<>"']/g, ch => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[ch]));
     }
 
-    // --- Relative thresholds (percentiles) ---
+    // Relative thresholds (percentiles): bottom 25%, middle 50%, top 25%
     function thresholds() {
       const scores = customersCache.map(c => Number(c.health_score || 0)).sort((a,b)=>a-b);
       if (!scores.length) return { q25: 40, q75: 80 };
@@ -88,7 +125,7 @@
       tbody.innerHTML = '';
       if (!customersCache.length) {
         const tr = document.createElement('tr');
-        const td = document.createElement('td'); td.colSpan = 3; td.textContent = 'No data.';
+        const td = document.createElement('td'); td.colSpan = 4; td.textContent = 'No data.';
         tr.appendChild(td); tbody.appendChild(tr);
         return;
       }
@@ -114,6 +151,7 @@
         const tr = document.createElement('tr');
         tr.dataset.id = c.id;
 
+        const tdId    = document.createElement('td'); tdId.textContent = c.id; tdId.className='idcol'; tr.appendChild(tdId);
         const tdScore = document.createElement('td'); tdScore.appendChild(scoreBadge(score)); tr.appendChild(tdScore);
         const tdName  = document.createElement('td'); tdName.textContent = c.name; tr.appendChild(tdName);
         const tdSeg   = document.createElement('td'); tdSeg.textContent = c.segment; tr.appendChild(tdSeg);
@@ -132,7 +170,7 @@
         render();
       } catch (e) {
         const tbody = document.getElementById('tbody');
-        tbody.innerHTML = '<tr><td colspan="3">Failed to load customers.</td></tr>';
+        tbody.innerHTML = '<tr><td colspan="4">Failed to load customers.</td></tr>';
       } finally {
         btn.disabled = false; btn.textContent = 'Refresh';
       }
@@ -144,8 +182,8 @@
 
       const detailsTr = document.createElement('tr');
       detailsTr.className = 'details-row';
-      const td = document.createElement('td'); td.colSpan = 3;
-      td.innerHTML = `<div class="small">Loading breakdown for <strong>${escapeHtml(name)}</strong>…</div>`;
+      const td = document.createElement('td'); td.colSpan = 4;
+      td.innerHTML = `<div class="small">Loading breakdown for <strong>${escapeHtml(name)}</strong> (ID ${id})…</div>`;
       detailsTr.appendChild(td);
       row.insertAdjacentElement('afterend', detailsTr);
 
@@ -154,7 +192,7 @@
         const breakdown = await res.json();
         const factors = breakdown.factors || {};
         td.innerHTML = `
-          <div><strong>${escapeHtml(name)}</strong> — Total:
+          <div><strong>${escapeHtml(name)}</strong> (ID ${id}) — Total:
             <span class="badge ${badgeClass(breakdown.total)}">${Number(breakdown.total).toFixed(1)}</span>
           </div>
           <div class="factor-grid">
