Fixing legend in dashboard

--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -57,11 +57,11 @@
       Click any row to view that customer’s factor breakdown directly beneath it.
     </p>
     <ul>
-      <li><strong>Login Frequency (30d)</strong> — engagement level. Normalized by seats and segment targets.</li>
-      <li><strong>Feature Adoption (30d)</strong> — breadth of value: distinct core features used.</li>
-      <li><strong>Support Ticket Volume (30d)</strong> — product friction. Penalized per 100 seats (fewer is better).</li>
-      <li><strong>Invoice Timeliness (≈180d)</strong> — commercial risk, using a <em>recency-weighted</em> paid vs late ratio.</li>
-      <li><strong>API Usage Trend (7d vs prev 7d)</strong> — short-term momentum (ratio up/down around neutral).</li>
+      <li><strong>Login Frequency</strong> — engagement level. Normalized by seats and segment targets.</li>
+      <li><strong>Feature Adoption</strong> — breadth of value, users aware of specific features in a product: distinct core features used.</li>
+      <li><strong>Support Ticket Volume</strong> — product friction, high volumes can strain resources and lead to longer response times . Penalized per 100 seats (fewer is better).</li>
+      <li><strong>Invoice Timeliness</strong> — Timely invoicing provides a positive customer experience. Commercial risk, using a <em>recency-weighted</em> paid vs late ratio.</li>
+      <li><strong>API Usage Trend (7d vs prev 7d)</strong> — reflecting adoption rates, value provided, and potential issuesshort-term momentum (ratio up/down around neutral).</li>
     </ul>
   </div>
 
