--- a/backend/app/static/dashboard.html
+++ b/backend/app/static/dashboard.html
@@ -29,6 +29,7 @@
     @media (max-width: 640px){
       .sub{ font-size: 18px; }
     }
+    .subsub{color:var(--muted);max-width:980px;line-height:1.5;margin:10px auto 0;text-align:center}
     .shell{padding:10px 20px 40px}
     .panel{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:14px 14px;box-shadow:0 1px 2px rgba(0,0,0,.04)}
     .controls{
@@ -124,7 +125,7 @@
     <p class="sub">
       <b>All you need to know in one score</b>
     </p>
-    <p class="sub">
+    <p class="subsub">
       Scores blend <b>Login Frequency</b>, <b>Feature Adoption</b>, <b>Ticket Volume</b>,
       <b>Invoice Timeliness</b>, and <b>API Usage Trend</b>. Higher is better (0–100).
     </p>
